[package]
name = "keycrypt"
version = "0.1.0"
edition = "2018"

[lib]
name = "keycrypt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "benchmark"
harness = false

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }

[dependencies]
structopt = "0.3"
